--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "dev:socket": "cross-env NODE_OPTIONS=\"--loader ts-node/esm --trace-warnings --no-warnings\" ts-node src/server.mts",
-    "build": "next build",
-    "build:socket": "next build && tsc --project tsconfig.server.json",
-    "start": "next start",
-    "start:socket": "cross-env NODE_ENV=production node dist/server.mjs",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production node dist/server.mjs",
     "lint": "next lint"
   },
   "dependencies": {
